--- a/_posts/2023-05-05-PQ-網路軍種正夯-日本網路部隊將擴編至2.5倍.html
+++ b/_posts/2023-05-05-PQ-網路軍種正夯-日本網路部隊將擴編至2.5倍.html
@@ -8,7 +8,7 @@ tags: blog
 author: 陳怡菱
 ---
 
-<p>關於日本被指出在防衛網路攻擊方面現有體制上的不足，日本防衛省已決定在今（2023）年度結束（到明年 4 月底）之前將自衛隊的網路專業部隊人員擴編約 1,340 人到約 2,230 人。考慮到中國等國家正在加強其網路領域的能力，因此需要加快強化這方面的能力。</p>
+<p>關於日本被指出在防衛 #網路攻擊 方面現有體制上的不足，日本防衛省已決定在今（2023）年度結束（到明年 4 月底）之前將自衛隊的網路專業部隊人員從約 1,340 人擴編到約 2,230 人。考慮到中國等國家正在加強其網路領域的能力，因此需要加快強化這方面的能力。</p>
 
 
 
@@ -16,7 +16,7 @@ author: 陳怡菱
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-1024x683.jpg" alt="" class="wp-image-95039" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>2022年3月時任日本防衛大臣岸信夫將司令旗授予「網路防衛隊」司令木村顯繼陸將補（相當於陸軍少將）。<br>（圖／推特 @ModJapan_jp）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-1024x683.jpg" alt="" class="wp-image-95039" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/acb31f48-fobxa7zacayes5g@modjapan_jp.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>2022年3月時任日本防衛大臣岸信夫將司令旗授予「網路防衛隊」司令木村顯繼陸將補（相當於陸軍少將）。<br>（圖／推特 @ModJapan_jp）</figcaption></figure>
 
 
 
@@ -40,7 +40,7 @@ author: 陳怡菱
 
 
 
-<p>「安保 3 文件」當中，明確記載「將網路安全領域的應對能力，提升到與歐美主要國家同等或更高水準」，並制定了在 2027 年度以前將網路專業部隊的人數增加到約 4,000 人的計劃。包含從事採購、維護和營運系統的人員，預計總人數將達到約 20,000 人，還納入了未來再進一步擴充的目標。</p>
+<p>日本去（2022）年底修訂的「安保 3 文件」當中，明確記載「將網路安全領域的應對能力，提升到與歐美主要國家同等或更高水準」，並制定了在 2027 年度以前將網路專業部隊的人數增加到約 4,000 人的計劃。包含從事採購、維護和營運系統的人員，預計總人數將達到約 20,000 人，還納入了未來再進一步擴充的目標。</p>
 
 
 
