Update VOCUS 2023-05-06 patch

--- a/_posts/2023-05-04-VOCUS-追殺代理人-街上有多少似人非人.html
+++ b/_posts/2023-05-04-VOCUS-追殺代理人-街上有多少似人非人.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">雖然有著一些知名的演員出演，且動畫也有一定的水準之上，但我認為編劇在考慮主題線時，太多地方在強調艾文與老婆之間的感情，和之間那曖昧不明的認同感，太多鋪成卻沒有在最後有很好的反轉，也無法跟另外兩條支線有好好的呼應與對應感，讓三條明明在同個故事裡，卻如同陌生人，讓整體故事變得又臭又長，卻沒有什麼驚喜。</div>
 <div class="draft-block draft--p left">我認為即便是過去的想法頗為新鮮的人工智慧與人心，但到現在看過很多創作與正在現在進行式接觸人工智能的觀眾，這樣半吊子的機器人電影，是很難有吸引力的。</div>
 <div class="draft-block draft--p left">並且沒有張力這點可說是整部電影的死穴。我認為如果要拍攝這類的電影要與時俱進的探討出新東西，而不是將前人經典拿來東拼西湊，而沒有半點自己的觀點，這會讓故事導向無趣，還不如回顧老電影要來得實在。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/5HzkWC9M5BE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/5HzkWC9M5BE"></iframe></div>
