--- a/_posts/2023-05-05-VOCUS-漫威公路電影-星際異攻隊-系列簡談.html
+++ b/_posts/2023-05-05-VOCUS-漫威公路電影-星際異攻隊-系列簡談.html
@@ -27,7 +27,7 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">來到《星際異攻隊2》才正式帶出星爵的身世，並為後續的英雄群戰埋下了伏筆，也解鎖更多漫畫中的小隊成員。經歷了更多不同的爭端，角色之間的情感也從隊員昇華成家人，彼此的嘴砲也越來越不留情，來到以火箭浣熊身世之謎為主軸的《星際異攻隊3》則更加深了彼此的羈絆。</div>
 <div class="draft-block draft--p left">《星際異攻隊3》除了延續《星際異攻隊》與《星際異攻隊2》還有特別篇的故事之後外，也因為漫威其他電影影響故事走向之故，讓整體團隊的關係和彼此的感情有些許變化。這次依舊延續過去電影一慣的步調，以團員被捲入其中，牽一髮而動全身，其中也帶出星際異攻隊每個團員獨特的魅力與特質，才又讓一項不可能的任務變成可能。</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/e1321a9e-f50e-4fdd-9e37-33b6128d72e2.jpg" data-width="1402" data-height="788" data-position="center" src="https://images.vocus.cc/e1321a9e-f50e-4fdd-9e37-33b6128d72e2.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/DjSYqPimTOo"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/DjSYqPimTOo"></iframe></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/95695749-f95b-4c7a-bc06-dde45acd1a34.jpg" data-width="1920" data-height="1080" data-position="center" src="https://images.vocus.cc/95695749-f95b-4c7a-bc06-dde45acd1a34.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <h2 class="draft-block draft--h2" name="header-fnnch"><span style="font-weight: bold; ">不完美的小人物聚首一起，比起全能英雄更讓人喜愛</span></h2>
 <div class="draft-block draft--p left">如果要說從第一部到第三部，《星際異攻隊》一直都很像公路冒險電影，從小時候無故離開地球加入破壞者的星爵，從本來預定好的一個人的星際旅程，變成來來去去的同伴相互上路。</div>
@@ -42,7 +42,7 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">而比起復仇者聯盟每個有頭有臉的角色，星際異攻隊的角色雖然多為宇宙生物與居民，但還是以有意思的合作和相互嘴砲的搞笑冒險方式，讓觀眾留下深刻印象，也讓在文戲時突然安靜與殘酷的故事推進，會讓觀眾瞬間鼻酸。</div>
 <div class="draft-block draft--p left">如果以故事而言，星際異攻隊的安排並不是非常特別，就是夥伴出示或出包，而引發一連串的蝴蝶效應，甚至是無意間獲得人人夢寐以求的宇宙至寶，而展開宇宙間的追逐與混戰。這樣故事很多冒險題材都會使用，但星際異攻隊因在原作中就是漫畫團隊各式各樣的設計師、小說家、角色藝術師等分別設計出來的角色，將其湊再一起而引發有趣的化學效應，讓普通的公路冒險，變成一群問題學生的刺激修學之旅。</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/00e0e101-6416-4c6c-be0f-65e928e6bde3.jpg" data-width="1200" data-height="800" data-position="center" src="https://images.vocus.cc/00e0e101-6416-4c6c-be0f-65e928e6bde3.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/d4P2fLpgNf4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/d4P2fLpgNf4"></iframe></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/f40dc962-bd8c-4e71-b9fe-05f94fb0185c.jpg" data-width="1800" data-height="1200" data-position="center" src="https://images.vocus.cc/f40dc962-bd8c-4e71-b9fe-05f94fb0185c.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/97270176-713e-4ed8-8b7b-fbe3bd9e2f12.jpg" data-width="1200" data-height="800" data-position="center" src="https://images.vocus.cc/97270176-713e-4ed8-8b7b-fbe3bd9e2f12.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <h2 class="draft-block draft--h2" name="header-fc0vf"><span style="font-weight: bold; ">走向階段結束的《星際異攻隊3》後續猜想和可能</span></h2>
@@ -56,4 +56,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">但可以說電影保持一些固定的基調與特色，老歌串長、主角團彼此相互嘴砲、私自行動造成各種正反效果，這些等等每當在《星際異攻隊3》電影看到，就覺得這還是熟悉的《星際異攻隊》。且也加入一點點小改編和巧思，讓觀眾很能接受裡面角色帶來的改變和衝突性，與主角群在一次次冒險拉著彼此成長，讓整體來說成為又一次有趣的公路冒險電影。</div>
 <div class="draft-block draft--p left">隨著導演在社群平台上公開《星際異攻隊3》有兩個片尾花絮的訊息，讓人觀眾不僅猜測是否會讓裡面角色，改用其他方式登場的可能？例如客串其他英雄電影，和在漫威電影宇宙中星際異攻隊未出場的角色回歸重組的可能性。</div>
 <div class="draft-block draft--p left">但隨著戲外漫威、導演、演員等之間的紛紛擾擾，許多劇迷更傾向將這當成星際異攻隊陪伴9年的一段結束。可以說這次《星際異攻隊3》整體四平八穩，也有驚艷之處，可以說給了這系列一個完整的謝幕，下台一鞠躬。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/PvKiPCgsH3c"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/PvKiPCgsH3c"></iframe></div>
