--- a/_posts/2023-05-05-INMEDIA-初選47人案-鍾錦麟-建制媒體批評初選遂憂dq風險-對戴耀廷稱否決財案合法-疑中留情.html
+++ b/_posts/2023-05-05-INMEDIA-初選47人案-鍾錦麟-建制媒體批評初選遂憂dq風險-對戴耀廷稱否決財案合法-疑中留情.html
@@ -18,7 +18,7 @@ author: 獨媒報導
 <p>陳慶偉問，因此鍾有此想法，是建基於建制派的說法？鍾同意，並指是在2019年的脈絡下閱讀相關訊息。陳續問，因此即使戴向他指這是基本法賦予的權力，也沒有改變他的看法？鍾指，「我帶住一個，或者咁講，『疑中留情』囉」，解釋是對戴耀廷的說法「疑中留情」，並指相信中央可能會有「組合拳」。</p>
 <p>法庭傳譯問「組合拳係咩？」，多人大笑，庭上亦議論紛紛，陳慶偉提議譯「combination of punches in boxing」、李運騰稱「combination of strategies」。鍾同意可算是一些「策略」，並指「但係千頭萬緒，唔清楚究竟乜嘢會觸發去大規模咁調整對港嘅政策，所以拆彈拆得一樣得一樣」。</p>
 <p><strong>鍾稱當時相信戴耀廷稱否決財案「合法」 指「我拗唔過戴耀廷」</strong></p>
-<p>李運騰續指他不明白，指鍾在4月中時已對無差別否決預算案引致DQ感憂慮，而他特意在會後向戴表達，戴則只是以反問回應，「你就對戴耀廷的回應感到滿意？還是你有做什麼釋除疑慮？」鍾回應：「我覺得最好唔好（要求參選人否決預算案），但我當時相信咗戴耀廷話呢件事係合法嘅。」</p>
+<p>李運騰續指他不明白，指鍾在4月中時已對無差別否決預算案引致DQ感憂慮，而他特意在會後向戴表達，戴則只是以反問回應，「你就對戴耀廷的回應感到滿意？還是你有做什麼釋除疑慮？」鍾回應：「我覺得最好唔好（提否決預算案），但我當時相信咗戴耀廷話呢件事係合法嘅。」</p>
 <p>李再指，戴是被批評的對象，但鍾卻對戴的解釋感滿意？鍾強調「我嘅關注就係有冇犯法」，指「表面睇，《基本法》的確係賦予咗立法會去審批政府開支嘅權力，我當刻唔能夠去答戴耀廷（否決預算案）點樣犯法」。鍾同意，此前已知道《基本法》賦予相關權力，李再問那與戴的對話有什麼改變他看法？鍾僅稱「我拗唔過戴耀廷」。</p>
 <p>Beel 其後再問，鍾錦麟2020年是否相信參選人提出反政府的議題，有機會導致被DQ？鍾稱參考過往被DQ的例子，不可提倡「港獨」和「自決」，「呢個係紅線中嘅紅線」，並同意戴倡否決財案有DQ風險。</p>
 <p><strong>鍾指何桂藍會上自介「立場姐姐」 何大聲稱：肯定冇！</strong></p>
