Update VOCUS 2023-05-09 patch

--- a/_posts/2023-03-05-VOCUS-俄烏戰爭一年總檢討-11-啟示-臺灣能從這場戰爭學到什麼.html
+++ b/_posts/2023-03-05-VOCUS-俄烏戰爭一年總檢討-11-啟示-臺灣能從這場戰爭學到什麼.html
@@ -37,15 +37,14 @@ author: 王立第二戰研所
 <ul>
   <li class="draft-block draft--li">各種條件齊備之下，連巡弋飛彈都能打下來，但這絕對不是簡單的事情。</li>
 </ul>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/EQ5BOEXKXoI"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/EQ5BOEXKXoI"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-7slj9">水泥城鎮易守難攻，戰車、地雷仍是陸戰重要武器</h3>
 <div class="draft-block draft--p left">陸地戰鬥大概是我們最需要學的部分，不是要學人家巷戰，筆者這邊先講清楚，省得一堆人亂跳坑。</div>
 <div class="draft-block draft--p left">戰車依然有用，最大的效力之一是隨伴步兵的安心感，當步兵知道己方已經沒有戰車可以保護自己，通常都會選擇撤退。而且戰車沒想像中那麼容易擊毀，媒體把反戰車飛彈講得很威，實際效力還是得看戰場，而且並不是一發一個，在俄軍坦克群圍攻壓制下，還不如組織裝甲部隊機動反擊，後方砲兵轟擊有效。</div>
 <div class="draft-block draft--p left">城鎮戰比想像的難打，大概是因為波灣戰爭後，都沒有中大型城市遭遇戰火，導致我們對巷戰的想像都停留在伊拉克。在烏克蘭這種地形，有大量水泥建物的地方，得用非常大量的炮火才能摧毀建築，而理論上斷垣殘壁對進攻方是災難，實際上更加嚴重。俄軍在烏東遇到烏克蘭構築強硬的陣地，往往得付出非常大的犧牲才能換得一點戰果。</div>
 <div class="draft-block draft--p left">地雷還是非常好用的武器，廣大的雷區能極有效的遲滯裝甲部隊進攻，再搭配砲兵放手的開放地區下，想越野發起攻擊，埋設地雷比想像的有用。就算是戰爭初期，把地雷擺放在道路上，也都能拖延進攻的俄軍處理，最起碼能讓搶快的俄軍避開主要道路，降低前進速率。掃雷車不是沒有用，而是使用時機難以掌握，加上烏克蘭並非沒有反擊力量，俄軍重進攻、輕補助的弱點就被凸顯出來。</div>
 <div class="draft-block draft--p left">這表示台灣對地雷的想像太過粗淺，尤其是之前鬧很大的火山布雷車，我們才發現，明明有那麼多工兵退下來的弟兄，卻沒多少人相信布雷是國軍早就有的戰術。輕易的跟媒體風向轉，不用談到地雷戰術應用，也不提人員殺傷雷跟反裝甲雷的差異，居然有人相信台北市街頭將會到處都是地雷，顯示一般民眾對軍事常識的認知幾乎是零。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/9S_2FRvJFbk"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/9S_2FRvJFbk"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-cfk70">無人機非決定勝負的要素，但相當適合反登陸作戰</h3>
 <div class="draft-block draft--p left">無人機很好用，但也沒想像好用，戰場上的電磁訊號紛亂，小型無人機的損耗極快，中大型則無法在到處都是防空飛彈的現代戰場生存。這給我們的啟示是，無人機確實要早點建制，但也不需要過度看重到好像沒有無人機就死定。</div>
 <div class="draft-block draft--p left">因為台灣沒有要反攻大陸，解放軍要遙控戰場戰術無人機協助，都要登陸後才有足夠訊號強度。烏克蘭已經證明中大型無人機生存率極低，台灣防空火力遠高於烏克蘭，過度憂慮是不必要的。</div>
