--- a/_posts/2023-05-08-INITIUM-早报-德州商场枪击案遇害者包括韩裔一家三口-印度裔工程师等.html
+++ b/_posts/2023-05-08-INITIUM-早报-德州商场枪击案遇害者包括韩裔一家三口-印度裔工程师等.html
@@ -19,7 +19,7 @@ author:
 <p>美国德克萨斯州在巴士站撞死8人的<a href="https://www.bbc.com/news/world-us-canada-65527516">司机被起诉，罪名是过失杀人</a>。目前还无法判定司机是否故意撞人。</p>
 <p>警方公布了司机身份。他的名字是乔治·阿尔瓦雷斯（George Alvarez），34岁，布朗斯维尔（Brownsville）当地居民。</p>
 <p>他有长期多种犯罪历史，包括9次对家人、公职人员、老人和残障人士的攻击指控，以及酒醉驾驶、持有大麻、入室盗窃和逃避逮捕等指控。</p>
-<p>据警方描述案发情形，阿尔瓦雷斯当时开车闯了一个红灯，并且对车失去控制，汽车撞向巴士站的人群，造成8人死亡，12人受伤。阿尔瓦雷斯肇事后试图逃逸，但被在场其他人按住。</p>
+<p>据警方描述案发情形，阿尔瓦雷斯当时开越野车闯了一个红灯，并且对车失去控制，汽车撞向巴士站的人群，造成8人死亡，12人受伤。阿尔瓦雷斯肇事后试图逃逸，但被在场其他人按住。</p>
 <p>这个巴士站旁边有一个无家可归者和移民的收容所，伤亡者大多是委内瑞拉人。目前没有证据显示阿尔瓦雷斯在肇事前表达过反移民的情绪，不过当局也没有排除故意袭击的可能。警方还在等待酒精和药物检查报告。</p>
 <h3>乌克兰称击落俄罗斯全部来袭无人机</h3>
 <p>俄罗斯在纪念二战胜利日（5月9日）前夕，<a href="https://www.reuters.com/world/europe/least-five-wounded-due-russian-strikes-kyiv-city-officials-say-2023-05-07/">向乌克兰发起一波无人机攻击</a>，是近几个月规模最大的一次。乌克兰称将所有无人机全部击落。</p>
@@ -35,7 +35,7 @@ author:
 <p>人权组织批评说，伊朗的法院经常会作出非常不公正的判决，而且会动用酷刑来获得虚假“证词”，并以此作为证据。</p>
 <p>总部设在挪威的伊朗人权组织主任马哈茂德·阿米里-莫哈达姆（Mahmood Amiry-Moghaddam）批评说，以“侮辱先知”的罪名处决两人，这不仅是中世纪政权的残暴行为，也是对言论自由的严重侮辱。</p>
 <h3>加拿大驱逐一名中国外交官</h3>
-<p><a href="https://www.reuters.com/world/americas/canada-expels-chinese-diplomat-accused-targeting-lawmaker-2023-05-08/">加拿大周一驱逐了一名驻多伦多的中国外交官赵伟（Wei Zhao）</a>，因为近日公开的一份报告指控他试图针对批评中国压迫穆斯林的加拿大议员。这次事件势必会导致中加两国紧张关系升级。</p>
+<p><a href="https://www.reuters.com/world/americas/canada-expels-chinese-diplomat-accused-targeting-lawmaker-2023-05-08/">加拿大周一驱逐了一名驻多伦多的中国外交官赵伟（Wei Zhao）</a>，因为近日公开的一份报告指控他试图针对批评中国压迫穆斯林的加拿大议员莊文浩（Michael David Chong）。这次事件势必会导致中加两国紧张关系升级。</p>
 <p>加拿大外交部长梅拉尼·乔利（Melanie Joly）发表声明称，加拿大政府经过综合考量，决定将赵伟列为“不受欢迎的人”。</p>
 <p>加拿大安全情报局2021年撰写了一份关于中国在加拿大的影响力的报告，加拿大《环球邮报》上周披露了报告的细节内容。</p>
 <p>这份报告称，庄文浩因多次批评中国人权状况，以及参与起草并支持国会承认中共对新疆维吾尔族实行种族灭绝的法案，从而成为中方的目标对象。</p>
