Update VOCUS 2023-05-11 patch

--- a/_posts/2023-05-09-VOCUS-我將小孩送給你-有什麼辦法.html
+++ b/_posts/2023-05-09-VOCUS-我將小孩送給你-有什麼辦法.html
@@ -17,7 +17,7 @@ author: 王大明
 <div class="draft-block draft--p left">「嗯… 我其實有看過。在三重」小明回答。</div>
 <div class="draft-block draft--p left">『咦？三重怎麼可能有梯田？』母親感到疑惑。</div>
 <div class="draft-block draft--p left">「我說的是"丸山千枚田"，在日本的三重縣。去年乾爹才帶我去過。」小明回答。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/beQdwpT9Hrw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/beQdwpT9Hrw"></iframe></div>
 <div class="draft-block draft--p left">對小明而言，父母的生活確實比較陌生；畢竟養父母帶著他見識的，都不是父母的生活。</div>
 <div class="draft-block draft--p left">所以，當父母在分享夜市擺攤生活時；小明想到的是「家樂福小小店長」。父母提起去速食店打工時，小明會覺得「遊戲陪玩師」更好賺錢。</div>
 <div class="draft-block draft--p left">「至少也應該接一個線上家教吧？速食店時薪真的不多，不是嗎？」小明的世界顯然跟父母大不相同。</div>
@@ -43,7 +43,6 @@ author: 王大明
 <div><h3><a href="https://adoptinfo.sfaa.gov.tw/adoption/page/what_is_adoption">何謂收養:收養人::兒童及少年收養資訊中心</a></h3><span>「收養」又稱為「領養」，是非（直系）血親的雙方，經過法律認可的過程，建立親子關係，使失依兒童得一永久家庭，同時也為收養父母覓得子女，視同親生。收出養制度所追求的目標，是在一個圓滿的環境中，培育兒童成長，使他能享有充分的愛和關懷。收養不是救濟，也不是資助，而是要付出真誠的關懷來扶養照顧孩子。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fadoptinfo.sfaa.gov.tw%2Fuploads%2Fimages%2Fdefault_fb.jpg&amp;width=550&amp;sign=NegjcZIlClMvT7XZ9Dm6ULXsRXdh9NE3Y24bJSdufHo"></div>
 <h2 class="draft-block draft--h2" name="header-do50n">為什麼收養要經過媒合？</h2>
 <blockquote class="draft-block draft--blockquote">2022年，一位菲律賓22歲媽媽上當地新聞節目，自爆以4.5萬披索的價錢，讓1名陌生人「領養」她8個月大的孩子，款項用以償還自己玩網上鬥雞博彩的賭債，現在她希望要回寶寶。<br><br>她表示交易始於1個收養孤兒的群組聊天，她於3月1日收到一個陌生人訊息，說有興趣領養她的寶寶，對方說可以提供2萬披索的費用，且有人可以開出更高價錢。媽媽則希望收到5萬披索，雙方討價還價後，最終以4.5萬披索的「領養費」成交。<br><br>雙方去到馬尼拉東北部奎松市的快餐店見面，對方要求媽媽提供身份證明及簽署一些文件，她沒有取得文件的副本，也沒有領養人的照片，收錢後就讓對方把孩子抱走。媽媽很快就後悔了，向那班人發訊息，說想要回孩子，但馬上被封鎖，「我希望和她們溝通要回孩子」，媽媽傷心地表示願意還錢，只希望要回小孩。</blockquote>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://www.hk01.com/%E7%86%B1%E7%88%86%E8%A9%B1%E9%A1%8C/746106/22%E6%AD%B2%E5%AA%BD%E8%B3%A3bb%E9%82%84%E8%B3%AD%E5%82%B5%E5%8B%81%E5%BE%8C%E6%82%94-%E5%93%AD%E8%A8%B4%E6%9C%9B%E5%B0%8B%E8%A2%AB-%E9%A0%98%E9%A4%8A-%E5%85%92-%E5%BE%8B%E5%B8%AB-%E8%B2%A9%E8%B3%A3%E5%85%92%E7%AB%A5">22歲媽賣BB還賭債勁後悔　哭訴望尋被「領養」兒　律師：販賣兒童</a></h3><span>該外菲律賓22歲媽媽日前上當地新聞節目，自爆以4.5萬披索的價錢，讓1名陌生人「領養」她8個月大的孩子，款項用以償還自己玩網上鬥雞博彩（e-Sabong）的賭債，現在她希望要回寶寶。她表示交易始於1個收養孤兒的群組聊天，她於3月1日收到一個陌生人訊息，說有興趣領養她的寶寶，對方說可以提供2萬披索的費用，且有人可以開出更高價錢。媽媽則希望收到5萬披索，雙方討價還價後，最終以4.5萬披索的「領養...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fcdn.hk01.com%2Fdi%2Fmedia%2Fimages%2Fdw%2F20220313%2F579490860421353472813749.jpeg%2FHJxQg6m7zv3PfZJMmGc_oUbI5H8yTl49TstkhE7LZIQ&amp;width=550&amp;sign=3L_GZeO-krGADyx1YZslxLjA8DOM3sazaoMpwuLJZew"></div>
 <div class="draft-block draft--p left">從以前到現在，「販賣兒童」 都是真實發生的新聞事件。如果讓陌生人「收養」自己的未成年子女，有很大風險是交易行為。然而，兒童不是商品，不應該允許交易。</div>
 <div class="draft-block draft--p left">所以現在的<a href="https://www.sfaa.gov.tw/SFAA/Pages/Detail.aspx?nodeid=415&amp;pid=2988" target="_blank" class="draft--a">兒童及少年福利法已經規定</a>，除了一定親屬之間收養或是夫妻之一方收養他方子女外，收養兒童及少年都必須透過經政府許可的兒少安置機構或財團法人代為辦理。也要求法院認可收養前，可以請收養人接受親職準備教育課程、精神鑑定及藥酒癮檢測，以保障被收養兒童的權益。</div>
@@ -67,7 +66,4 @@ author: 王大明
   <li class="draft-block draft--li">然而，礙於同婚專法第二十條規定，「一方收養他方之親生子女」時準用民法收養相關規定，因為肉肉非兩人親生子女，即使圍圍和喵喵登記結婚，但民法上，喵喵和肉肉沒有血緣關係，是不可以收養的。</li>
   <li class="draft-block draft--li">歷經兩年訴訟，高雄少家法院裁定許可喵喵的「收養聲請」，正式成為肉肉在法律上的另一個爸爸。這一家人也是全台第一個<span style="font-weight: bold; ">同志雙親無血緣收養家庭</span>。</li>
 </ol>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://news.ltn.com.tw/news/life/paper/1493963">兩個爸爸 首例無血緣收養家庭誕生 - 生活 - 自由時報電子報</a></h3><span>歷經2年爭取，全台第一個同志雙親無血緣收養家庭誕生。（翻攝彩虹平權大平台臉書粉專） 2022/01/05 05:30 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimg.ltn.com.tw%2FUpload%2Fnews%2F600%2F2022%2F01%2F05%2F87.jpg&amp;width=550&amp;sign=tAttEOKibHrenrE1lbSlpGOiJZNBXVQ-gz_v2f3xyVg"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
