--- a/_posts/2023-05-09-VOCUS-王立宇宙軍-畫面設定絕佳-但商業卻大暴死的高價動畫作.html
+++ b/_posts/2023-05-09-VOCUS-王立宇宙軍-畫面設定絕佳-但商業卻大暴死的高價動畫作.html
@@ -51,4 +51,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">但《王立宇宙軍～歐尼亞米斯之翼～》的缺點也是可見的，首先他在男女角色的感情上的描繪很勉強，甚至以現代的觀感不討喜。</div>
 <div class="draft-block draft--p left">男主的成長戲放在現代故事來說已經有些老套，並且當時代的科幻浪漫，其實是用很長片的日常去疊加出來的科幻感，但這種感覺如果是電視動畫就可以把更多細節描繪的更詳細。可以說電影從頭到尾很多事件其實不影響，尤其是男女主角薄弱的情感故事對於主線可有可無。</div>
 <div class="draft-block draft--p left">以整體來說，我很喜歡裡面在描繪工場與科幻日常時候展現出來的樣貌，現在一些科幻背景的動漫畫，往往都套用一個既定好的模板，就像是如今穿越異世界的輕小說像是在他人設定好公版下描繪的故事。而《王立宇宙軍～歐尼亞米斯之翼～》的世界卻是一種從無到有，讓人想在深刻了解的另一顆地球。也讓他方的宇宙有了個美麗且異常的風景想向，可以說動畫本身並不虧，而是現實栽了一跤。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/vVAyXyiQO9E"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/vVAyXyiQO9E"></iframe></div>
