--- a/_posts/2023-05-09-VOCUS-馬雅國新聞-科學家說他們終於瞭解馬雅曆法了.html
+++ b/_posts/2023-05-09-VOCUS-馬雅國新聞-科學家說他們終於瞭解馬雅曆法了.html
@@ -10,16 +10,14 @@ author: 馬雅人
 
 <div class="draft-block draft--p left">先工商一下，歡迎大家贊助大使，可以讓大使產出更多文章，傳遞學界資訊。<br>近期還有一個四周的線上課程，且可以錄影回放，一次讓你破解許多馬雅謠言，學習馬雅文化的新知</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/a331e0d3-b91e-4270-a2c1-3510d1c98ad2.jpg" data-width="850" data-height="425" data-position="center" src="https://images.vocus.cc/a331e0d3-b91e-4270-a2c1-3510d1c98ad2.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://reurl.cc/b7OVWo</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://reurl.cc/b7OVWo">【馬雅諸神歷險記】4週線上講座活動日期：2023-06-07 - BeClass 線上報名系統 Online Registration Form</a></h3><span>終結你曾經聽過的馬雅謠言--馬雅文化在世人眼中，總是以神秘、超自然形象存在著。不過，經過近幾十年的研究，馬雅文化早已不是如此神秘。我們透過人類學、考古學的研究，瞭解到馬雅文化各種層面的知識。馬雅文...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fwww.beclass.com%2Fshare%2F202305%2F274b11c644b81e457cf81150r.jpg&amp;width=550&amp;sign=VCyLoPSJfdeoFxkBKd_ATSQ-tETBwjp6DiECZiGK-Zc"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-9vngi">正文開始</h3>
 <div><h3><a href="https://www.sciencealert.com/scientists-think-theyve-finally-figured-out-how-a-maya-calendar-works">Scientists Think They've Finally Figured Out How a Maya Calendar Works</a></h3><span>A cycle featured in Maya calendars has been a mystery pretty much since it was rediscovered and its deciphering began in the 1940s. Covering a period of 819 days, the cycle is referred to simply as the 819-day count. The problem is that researchers couldn't match that 819 days up to anything.</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fwww.sciencealert.com%2Fimages%2F2023%2F04%2FMayaCalendar.jpg&amp;width=550&amp;sign=F8frRR_oQTbtlbMjFCLiuhW3i8DDkRtmx08Pq7Q9_9k"></div>
 <div class="draft-block draft--p left">先評論標題，就在著名的瑪雅銘文學家David Stuart在推特的評論。其實我們不是不知道馬雅曆法如何運作，其實我們對於各種曆法的運作方式，已經相當熟悉。這次的發現是把考古學家知道的819積日制，放大到20倍以上的週期，然後發現與肉眼可見的行星週期可以連結上。這樣讓考古學家更加瞭解馬雅不同曆法之間，還有天體與曆法之間存在什麼樣的關係。</div>
 <div class="draft-block draft--p left">話說回來，什麼是819積日制呢？其實，學者也只能知道一個大略架構。原因就是目前可以提供的文獻資料，無論是古代文字或是保留到現代的古抄本，總合起來，可能不超過十個案例。</div>
 <div class="draft-block draft--p left">819積日制是由9、13、7三個數字的乘積形成的一個週期。考古學家認為這種曆法始於古典晚期（650~850）帕連克城的一種神秘學。當時帕連課的君主屢敗於蛇王朝，Pakal王想要建立新王朝世系的權威。因此，創造819積日制，連結自己的繼位日期與神話時間。在819積日相關的文獻記載來說，他的套語包含一個稱為Glyph Y的字符、東西上下四個方向的文字，以及對應的顏色，最後還會有天神的名字。從這些對應文字字符看來，可以很快的聯想到一些古代文明的「曆算」之學，也會對應神明、色彩、方向等，謀求發現「神秘的秩序」。後來這種新型的積日計算，傳播到整個其他馬雅地區，我們在後古典期的德樂斯登古抄本上可以看到，在墨西哥恰帕斯的帕連克發源，同區域的亞需奇蘭（Yaxchilan）使用，甚至遠在宏都拉斯的柯潘（Copan）也使用819積日制。</div>
 <div class="draft-block draft--p left">考古學家以前就知道，這種新的積日方法，能夠與傳統使用的長紀年（Long Count）、哈布曆（Haab）以及卓爾金曆（Tzolkin）這三種曆法的運作方式，這邊為了篇幅就不多說，要請大家看一下這個影片瞭解一下。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/hN8UxBspa8I"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/hN8UxBspa8I"></iframe></div>
 <div class="draft-block draft--p left">接下來回到819積日制。實際上考古學家沒有發現任何一天一天計算的例子，有得只是819天的週期，以及各種819天的倍數。我覺得初學來說，最好的例子可能是2012年在Xultun發現一片寫在牆壁上的天文計算數列。</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/7b4eb7a2-fd9c-4d4f-b0e5-4ae2b50a49f3.png" data-width="908" data-height="648" data-position="center" src="https://images.vocus.cc/7b4eb7a2-fd9c-4d4f-b0e5-4ae2b50a49f3.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">其中第一列是由一組卓爾金字符與五個數字組成。卓爾金字符組合是1 K’aban。基本上819積日制可以與傳統的卓爾金曆相互配合，0/819時，一定是1 加上某個卓爾金字符。第一列下面有五個數字：8,6.1.9.0，即是1195740天，可以寫成63x18,980 或 4 x 819 x 365 ，63x18,980 又等於 9 x 365 x 364，因此將 4 x 819 x 365 與 9 x 365 x 364提出公因數365，正好與考古學家在之前發現的819積日制常見的等式 9 x 364 = 4 x 819 符合。</div>
@@ -33,8 +31,4 @@ author: 馬雅人
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/35d737b2-94f9-4c27-941e-d7066f541def.png" data-width="1732" data-height="644" data-position="center" src="https://images.vocus.cc/35d737b2-94f9-4c27-941e-d7066f541def.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div><h3><a href="https://www.cambridge.org/core/journals/ancient-mesoamerica/article/abs/maya-819day-count-and-planetary-astronomy/9839C2633BECD1356C94D4079E2580FE">The Maya 819-Day Count and Planetary Astronomy | Ancient Mesoamerica | Cambridge Core</a></h3><span>The Maya 819-Day Count and Planetary Astronomy</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fstatic.cambridge.org%2Fcovers%2FATM_0_0_0%2Fancient_mesoamerica.jpg%3Fsend-full-size-image%3Dtrue&amp;width=550&amp;sign=cBIX2q19LEPqlMkHMwLJ4V_2TzcKvkOOZnknaB95kGk"></div>
 <div class="draft-block draft--p left">從上述的表格來看，我們可以看到819積日制與卓爾金曆的「巧合」以及放大到20個週期後，與行星運行週期的配合。回頭也能解釋，為何是819這麼奇怪的數字。因此，819可說是馬雅「曆算」的一個偉大結晶，這呈現了古代馬雅人嘗試建立一個巨大的簡單算數的體系，統合所有曆法、天文星體、以及宗教與宇宙觀的努力。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">Tun </div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
