--- a/_posts/2023-05-11-VOCUS-洪瑞襄-2010.05.16.html
+++ b/_posts/2023-05-11-VOCUS-洪瑞襄-2010.05.16.html
@@ -10,44 +10,33 @@ author: 羅聖爾
 
 <div class="draft-block draft--p left">夢裡出現一位年輕女子，但不算很年輕。她的外貌看起來像混血兒，但感覺上又不全然是；一頭捲曲而長的黑髮，但不是很長；眼窩略深，卻又不算很深。她身上穿著一件「無袖的白色寬鬆長衫」(white chemise)，肩上還披了一件&nbsp;shawel (肩圍、肩披、披風，意通「披肩」、「肩膀的圍巾」或「披風」)。奇怪的是，她那披肩的穿著方式有點特殊：她把身上的&nbsp;shawel&nbsp;往上拉到鼻下、完全遮住了嘴巴。</div>
 <div class="draft-block draft--p left">此時，她站立在一座舞台上、手裡拿著一具麥克風，正在說話。但是，因爲她身上的&nbsp;shawel&nbsp;遮住了嘴巴，所以我也不太確定自己聽到的說話聲是不是她自己發出來的聲音。<span style="font-weight: bold; ">(P.S.&nbsp;夢醒之後，我忘了她在夢中說了些什麼。)</span></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-9ktjq"><span style="font-weight: bold; ">解夢：<br></span></h2>
 <div class="draft-block draft--p left">夢醒以後，我試著上網搜尋夢中出現的那位女子。由於該女子在夢中是出現在舞台上、拿著麥克風，所以直覺上我便去&nbsp;YouTube&nbsp;的一些音樂頻道及演唱節目逛逛，看看能不能找到形似的人物，心想也許是某位我還不知道的歌手、演員或演說家。</div>
 <div class="draft-block draft--p left">後來，我發現了一部黑白配色的音樂&nbsp;MV&nbsp;影片〈說給汪洋〉，而該影片的片頭靜態影像正是一位看似混血的女子、又穿著好像是遮掩了嘴部和下巴的&nbsp;shawel，靜態片頭影像上面還有幾個糢糊的字好像寫著「要記得愛的模樣」。接著，我便仔細觀察這個片頭靜態影像一會兒，想要找出一些蛛絲馬跡，看看和這個夢境有什麼其它的關聯，……&nbsp;一直到電腦突然當機為止。</div>
-<div class="draft-block draft--p left"></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/fc90bb27-6858-427b-9049-f5aa1a67da0d.jpg" data-width="1405" data-height="201" data-position="center" src="https://images.vocus.cc/fc90bb27-6858-427b-9049-f5aa1a67da0d.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/MyET0utejd8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/MyET0utejd8"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/zFcUq5ab63U" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/zFcUq5ab63U</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：《說給汪洋》-&nbsp;洪瑞襄&nbsp;/&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">重新開機以後，我急忙再度搜尋這部影片，然後從片頭的靜態影像往下看。這纔從這部不錯聽的&nbsp;MV&nbsp;影片中回憶到，其實我夢中出現的女子，長相比較像是影片中的歌手<span style="text-decoration: underline; ">洪瑞襄</span>和靜態片頭影像中的女性頭像合成在一起的感覺，而且夢中女子的衣著形式比較像是一種白色的無袖寬鬆襯衫&nbsp;(white chemise)。</div>
 <div class="draft-block draft--p left">也就是說，潛意識在製作夢境時，也可能帶有類似&nbsp;A.I.&nbsp;人工智慧的影像合成技術之能力。</div>
 <div class="draft-block draft--p left">但是，問題來了！影片中的歌手<span style="text-decoration: underline; ">洪瑞襄</span>究竟是何許人物？又爲何她的形像會在我的夢中被我的潛意識和一位遮掩嘴巴的陌生女子頭像合成在一起呢？……真是百思不得其解啊！……&nbsp;所以我就把這個夢一直擱著，沒有進一步去進行解夢的動作。</div>
 <div class="draft-block draft--p left">直到公元&nbsp;2021&nbsp;年&nbsp;9&nbsp;月&nbsp;12&nbsp;日，我又查閱了一些網路資料&nbsp;(以&nbsp;Wikipedia&nbsp;為主)&nbsp;以後，於是纔進一步得知：據說，人稱個性爽朗的藝人<span style="text-decoration: underline; ">洪瑞襄</span> <span style="font-weight: bold; ">(P.S.&nbsp;其中</span><span style="text-decoration: underline; font-weight: bold; ">瑞襄</span><span style="font-weight: bold; ">是她的藝名)</span> 於公元&nbsp;1968&nbsp;年出生於台北，早年經由民歌餐廳駐唱歌手的經驗，轉而活躍於舞台劇及電視劇的演出，曾經被譽爲「音樂劇的百變天后」，也曾經入圍電視金鐘獎迷你劇集最佳女主角獎；然而，公元&nbsp;2012&nbsp;年&nbsp;3&nbsp;月&nbsp;22&nbsp;日左右，她在寫下留給家人的幾封遺書之後，突然在她的自用小轎車內燒炭自殺身亡於林口，享年僅&nbsp;44&nbsp;歲。</div>
 <div class="draft-block draft--p left">奇怪的是，前述的睡夢是發生在<span style="text-decoration: underline; ">洪瑞襄</span>輕生之前的大約一年多之久，並且在作這個夢之前，筆者因爲忙於工作、平常很少觀賞舞台劇或電視上的連續劇等節目&nbsp;(大多是看電影)，所以完全不知道有這號才華洋溢的人物。但没想到，在夢醒後的第二年又十個月以後，她竟然紅顏薄命、英年早逝，而我對她的印象，卻始終還停留在先前搜尋到的那首愈聽愈好聽的歌曲〈說給汪洋〉。</div>
 <div class="draft-block draft--p left">最近，回顧了一些<span style="text-decoration: underline; ">洪瑞襄</span>曾經參與演出的舞台表演錄影片段，例如演繹有關台灣早期的台灣獨立自治意識、東亞自由民主意識及世界人權意識的宣揚者之一的<span style="text-decoration: underline; ">蔣渭水</span>先生之歷史事蹟的舞台劇《渭水春風》等。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/zFcUq5ab63U"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/zFcUq5ab63U"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/zFcUq5ab63U" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/zFcUq5ab63U</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：渭水春風&nbsp;-&nbsp;〈台灣文化協會〉選段&nbsp;/&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">此外，我又意外看到一則以前的新聞。</div>
 <div class="draft-block draft--p left">在此引述該則新聞的內容，大約是說：女演員<span style="text-decoration: underline; ">楊可涵</span>於公元&nbsp;2015&nbsp;年&nbsp;7&nbsp;月&nbsp;6&nbsp;日輕生，經過&nbsp;12&nbsp;天搶救後仍宣告不治，消息傳出震驚各界，也讓人想起&nbsp;2012&nbsp;年同樣自殺離世的女演員<span style="text-decoration: underline; ">洪瑞襄</span>，兩人都曾參與大愛戲劇《白袍的約定》演出，擔綱不同時期的同一角色，讓人不勝唏噓。《白袍的約定》是「人醫群俠傳系列」其中的一部真實人生電視劇，在公元&nbsp;2012&nbsp;年上映，<span style="text-decoration: underline; ">楊可涵</span>和<span style="text-decoration: underline; ">洪瑞襄</span>都曾經飾演其中的同一個角色「劉美麗」。</div>
 <div class="draft-block draft--p left">OK！更懸疑的部份似乎自此展開，因爲我夢中出現的女子，身上正是穿著一件白色的無袖寬鬆長衫，也就是類似「無袖的白袍」，這與<span style="text-decoration: underline; ">洪瑞襄</span>及<span style="text-decoration: underline; ">楊可涵</span>都曾經參與演出的那部戲劇《白袍的約定》之「白袍」似乎很巧合地關聯在一起，難道她們都是因為演了這部戲劇中的那個角色「劉美麗」而撞邪了嗎？……於是，我決定找出這部戲劇《白袍的約定》來看看。</div>
 <div class="draft-block draft--p left">首先，我自然要先欣賞一下《白袍的約定》的主題曲，感受一下這部戲劇可能帶有的前導氣氛。不過，剛開始看到歌詞的第一句「毋免驚」，立刻就發覺到語言文字上的重重矛盾。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/hJ-XCJwhjMs"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/hJ-XCJwhjMs"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/hJ-XCJwhjMs" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/hJ-XCJwhjMs</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：長情劇展  白袍的約定 片頭曲【毋免驚】MV /&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">原因是，漢字「毋」有「止之」(類似「制止」)、「不要」、「不能」、「別」、「莫」或「勿」的意思，例如「毋忘在莒」就是「不要忘了莒」、「不能忘了莒」、「別忘記莒城」、「莫忘在莒」或「勿忘在莒」之意，「免」則有「不必」或「不用」之意，例如「免禮」就類似「不必客氣」或「不用多禮」。</div>
 <div class="draft-block draft--p left">那麼，「毋免驚」不就應該是「不要不必驚」、「不能不用驚」或「別不必驚」、「別不用驚」、「莫不必驚」或「勿不用驚」之意而意通「要驚」、「得驚」或「須驚」了嗎？……&nbsp;然而，一般我們意會到的「毋免驚」一語之發音&nbsp;mbhengïa&nbsp;卻是「不必驚」、「不用驚」、「別驚」、「莫驚」、「勿驚」或「免驚」的意思，這也就說明了此處「毋免」兩字可能是一個同義複詞，意通「不必」、「不能」、「別」、「莫」、「勿」或「免」，而不能將「毋免」分開來當作是「毋」、「免」二字組合的結構來看。</div>
 <div class="draft-block draft--p left">另一個可能是，台閩語「毋免」本來不應該寫爲「毋免」，而是約略擬聲轉碼自某種不屬於漢語的其它語言，或是應該寫爲「務免」(意通「必免」或「不必」、「不須」)&nbsp;纔對，所以纔會出現這種字義結構矛盾的組合。至於其約略擬聲轉碼的原文是什麼呢？……&nbsp;個人認為，有可能是&nbsp;ought not&nbsp;及&nbsp;must not&nbsp;或&nbsp;may not&nbsp;之類的合成與變音。</div>
 <div class="draft-block draft--p left">這個有關漢字語文問題的發現，大概就是此夢目前帶給我的最大心得。</div>
 <div class="draft-block draft--p left">換句話說，漢字詞彙字義的準確性，有時不太能從表面上的漢字組合來判斷，否則會感到那是一個意義相當糢糊的渾言，也談不上邏輯方面的合理性，因爲有些字詞可能只是寫錯了字，或者是源自從前的古人不求甚解地從其它語言糊亂轉譯編碼而來。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">P.S. 相關文章：</span>夢的原理-The Elements of Dream</div>
 <div><h3><a href="https://vocus.cc/article/5c6d7172fd89780001eb98cb">夢的原理 -- The Elements of Dream (前言1/2)｜方格子 vocus</a></h3><span>該相信佛洛伊德 (Sigmund Freud，1856 ~ 1930)？還是該相信容格 (Carl Gustav Jung，1875 ~ 1961)？ 該相信理論？還是該相信直覺？...... 夢本, 解夢, oneiromancy, 夢的原理, TheElementsofDream, dream, 序言, 資訊, 訊息, 回溯, 佛洛伊德, 進口, 系統, 虛擬實境</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F1da1dad6-a87a-47ef-876a-1778b6697c7b.jpeg%26width%3D1200%26sign%3Dq7J-wPUsCrGW31oM-UERSbOydMyWEXXMI8VXh5oTOQo&amp;width=550&amp;sign=ZGqFd0L9ebW0wqOoP0TWcbEs0xn-nchMNaP0oS8omiQ"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
