--- a/_posts/2023-05-11-INMEDIA-限洋狀接國安案-陳文敏指遇複雜法律難請外援-或影響檢控質素.html
+++ b/_posts/2023-05-11-INMEDIA-限洋狀接國安案-陳文敏指遇複雜法律難請外援-或影響檢控質素.html
@@ -14,7 +14,7 @@ author: 獨媒報導
 <p><strong>新機制：書面陳述、無裁決理由、無上訴渠道</strong></p>
 <p>陳文敏指法院在考慮該四方面因素，並聽取控辯雙方陳詞，讓雙方在公開聆訊辯論，並就裁決給予理由，裁決亦設上訴機制。反而新訂立的《法律執業者條例》，海外律師需要自己證明不會影響國家安全，而處理申請的把關者由法院改為特首處理。他又指新機制下，除了書面陳述外不會再有聆訊，申請人或公眾不會知道特首考慮的因素，亦不會知道裁決理由。申請人不可以就裁決上訴，特首的決定亦不能被司法覆核。</p>
 <p>他同意即使現行制度，被告「無權一定要有海外律師」，但被告的申請可獲一個獨立、客觀的法院處理，但新修訂的條例，就削弱了被告這方面的權利。</p>
-<p>他又預計新例實施後，民間聘請海外律師將會愈來愈困難，但新例不影響被告，還涉及控方。他舉例如若案件涉及複雜法院問題，而本地沒有律師擅長處理，「邏緝上唔會控方請（海外律師）就唔影響國家安全，辯方請就會」，最終會影響檢控質素。</p>
+<p>他又預計新例實施後，民間聘請海外律師將會愈來愈困難，但新例不單影響被告，還涉及控方。他舉例如若案件涉及複雜法院問題，而本地沒有律師擅長處理，「邏緝上唔會控方請（海外律師）就唔影響國家安全，辯方請就會」，最終會影響檢控質素。</p>
 <p><strong>大部分國家由法院決定海外律師資格</strong></p>
 <p>陳文敏又補充，「國家安全唔係香港先有，全世界都有」，若政府說香港的國家安全情況「好獨特」，說法未必成立，例如涉及國家安全的「煽動罪」，在南非、紐西蘭、象牙海岸等前英國殖民地，「幾乎一模一樣都存在，有幾特別呢其實？」他又指在大部分國家，只要該律師有資業資格，不會限制接手哪種案件，而大多都由司法機構把關。</p>
 <p>主持人最後問，今次修例是否可被視為，政府不信賴司法機構就國家安全的決定；陳文敏指事件明顯削減了國際社會或公眾對司法制度的信心，「本來行之有效，法院可以處理嘅嘢，因為政治原因拎咗出嚟，我哋點再信法律制度仍然客觀、獨立運作？」</p>
