--- a/_posts/2023-05-11-INMEDIA-港足亞洲盃決賽周對手揭盅-與伊朗阿聯酋巴勒斯坦同組.html
+++ b/_posts/2023-05-11-INMEDIA-港足亞洲盃決賽周對手揭盅-與伊朗阿聯酋巴勒斯坦同組.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/rM7u546CW3" title="螢幕截圖 2023-05-11 下午7.29.41"><img src="https://live.staticflickr.com/65535/52888860461_c0cc7d7c9f_b.jpg" width="1024" alt="螢幕截圖 2023-05-11 下午7.29.41" /></a><br /><em>網上截圖</em></p>
 <p>港隊被抽到C3，同組有3支西亞球隊，包括伊朗、阿聯酋及巴勒斯坦。港足首場賽事將於1月14日先對阿聯酋，20日再對伊朗，26日則會對巴勒斯坦。</p>
 <p>參賽的24隊按4月最新世界排名分成4個檔次，每組均由各檔次的一支球隊組成，排名147的港足被編於第4檔次。在6組中，每組頭兩名可以晉身16強淘汰賽，另有4組的球隊可憑「最佳第三名」出線。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/P67Z1AHkaC" title="JA_1"><img src="https://live.staticflickr.com/65535/52889308943_97c0c142aa_b.jpg" width="1024" alt="JA_1" /></a><br /><em>足球總提供圖片</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/P67Z1AHkaC" title="JA_1"><img src="https://live.staticflickr.com/65535/52889308943_97c0c142aa_b.jpg" width="1024" alt="JA_1" /></a><br /><em>足總提供圖片</em></p>
 <p><strong>安達臣：少迎戰西亞球隊經驗 料較體力化</strong></p>
 <p>港足主教練安達臣在抽籤後表示，三隊對手的實力都很強，加上港足甚少迎戰西亞球隊的經驗，但認為踢法會較體力化，需好好好準備。</p>
 <p>安達臣近日在AFC官網訪問中亦提到，將以小組第3名為目標，甚至希望晉級，又指希望明年可以有一、兩千名港足球迷到卡塔爾支持港隊。</p>
