--- a/_posts/2023-05-11-PQ-興富發工安-吊臂砸落後列車仍啟動-中捷緊急應變措施在哪裏.html
+++ b/_posts/2023-05-11-PQ-興富發工安-吊臂砸落後列車仍啟動-中捷緊急應變措施在哪裏.html
@@ -16,7 +16,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）.png" alt="" class="wp-image-135963" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）.png 526w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）-300x300.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）-150x150.png 150w" sizes="(max-width: 526px) 100vw, 526px" /><figcaption>不幸喪生的林淑雅老師，生前致力於為多項人權議題發聲。（圖／民間司改會）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）.png" alt="" class="wp-image-135963" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）.png 526w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）-300x300.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/6a187ac0-（圖／民間司改會）-150x150.png 150w" sizes="(max-width: 526px) 100vw, 526px" /><figcaption>不幸喪生的林淑雅老師，生前致力於為多項人權議題發聲。（圖／民間司改會）</figcaption></figure></div>
 
 
 
