--- a/_posts/2023-05-12-PQ-痛批國防部擺爛-台灣基進推民防手冊普及全民防衛知識.html
+++ b/_posts/2023-05-12-PQ-痛批國防部擺爛-台灣基進推民防手冊普及全民防衛知識.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 痛批國防部擺爛！台灣基進推民防手冊普及全民防衛知識￼
+title: 痛批國防部擺爛！台灣基進推民防手冊普及全民防衛知識
 date: 2023-05-12 10:10:13.000000000 +00:00
 link: https://pourquoi.tw/taiwan-20230512-1/?utm_source=rss&utm_medium=rss&utm_campaign=taiwan-20230512-1
 categories: pq
@@ -12,7 +12,7 @@ author: 林奕辰
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-1024x473.png" alt="" class="wp-image-136130" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進今（12）日召開記者會，發表民防口袋小書《空襲來了怎麼辦？》，希望普及緊急避難知識。／圖：台灣基進</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-1024x473.png" alt="" class="wp-image-136130" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/f72536c6-95f78d70-787a-4451-a3d1-0ea2c1371a13.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進今（12）日召開記者會，發表民防口袋小書《空襲來了怎麼辦？》，希望普及緊急避難知識。／圖：台灣基進</figcaption></figure></div>
 
 
 
@@ -112,4 +112,4 @@ author: 林奕辰
 
 
 
-<p>參考資料：<br>2023/05/12　台灣基進　<a href="https://fb.watch/ktGKazUpxY/" target="_blank" rel="noopener" title="【LIVE】民防破網較緊補！基進民防口袋小書《空襲來了怎麼辦？》發表會">【LIVE】民防破網較緊補！基進民防口袋小書《空襲來了怎麼辦？》發表會</a></p><p>The post <a href="https://pourquoi.tw/taiwan-20230512-1/">痛批國防部擺爛！台灣基進推民防手冊普及全民防衛知識￼</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考資料：<br>2023/05/12　台灣基進　<a href="https://fb.watch/ktGKazUpxY/" target="_blank" rel="noopener" title="【LIVE】民防破網較緊補！基進民防口袋小書《空襲來了怎麼辦？》發表會">【LIVE】民防破網較緊補！基進民防口袋小書《空襲來了怎麼辦？》發表會</a></p><p>The post <a href="https://pourquoi.tw/taiwan-20230512-1/">痛批國防部擺爛！台灣基進推民防手冊普及全民防衛知識</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
