--- a/_posts/2023-05-12-INMEDIA-初選47人案-據悉控方應辯方要求-下周一傳召林景楠接受盤問.html
+++ b/_posts/2023-05-12-INMEDIA-初選47人案-據悉控方應辯方要求-下周一傳召林景楠接受盤問.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p>初選案今年1月17日審前覆核，原擬不認罪的林景楠<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%88%9D%E9%81%B847%E4%BA%BA%E6%A1%88%E3%80%91%E6%93%AC%E4%B8%8D%E8%AA%8D%E7%BD%AA17%E4%BA%BA%E4%BB%8A%E5%AF%A9%E5%89%8D%E8%A6%86%E6%A0%B8-%E6%9E%97%E6%99%AF%E6%A5%A0%E6%94%B9%E7%A8%B1%E6%93%AC%E8%AA%8D%E7%BD%AA">改由大律師、律政司前副刑事檢控專員沈仲平代表，並改為擬認罪</a>。沈並透露林可能會錄取證人供詞，會否出庭作供尚待決定。</p>
 <p>至案件2月6日開審，林<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%88%9D%E9%81%B847%E4%BA%BA%E6%A1%88%E3%80%9118%E8%A2%AB%E5%91%8A%E7%AD%94%E8%BE%AF-%E4%BC%8D%E5%81%A5%E5%81%89%E8%AA%8D%E7%BD%AA%EF%BC%9A%E6%88%91%E9%A1%9B%E8%A6%86%E6%A5%B5%E6%AC%8A%E5%9C%8B%E5%AE%B6%E6%94%BF%E6%AC%8A%E6%9C%AA%E6%88%90%E5%8A%9F-%E6%A2%81%E5%9C%8B%E9%9B%84%EF%BC%9A%E7%84%A1%E7%BD%AA%E5%8F%AF%E8%AA%8D%EF%BC%8C%E5%B0%8D%E6%8A%97%E6%9A%B4%E6%94%BF%E7%84%A1%E7%BD%AA">改由大律師吳漢輝代表，正式認罪</a>。控方當時表示，首4名出庭的控方證人為已認罪的區諾軒、趙家賢、鍾錦麟和林景楠。其中區諾軒、趙家賢和鍾錦麟相繼完成作供，控方續傳召匿名證人X先生作供，未有透露會否傳召林景楠，並於周三（10日）確認已傳召本案所有主要證人。</p>
 <p>控方原打算傳召時任選舉主任楊蕙心及與證物鏈相關的警員，惟因施德來和<a href="https://www.inmediahk.net/node/1096011/">彭卓棋相繼確診</a>，案件押至下周一續審。據了解，控方預料下周一傳召林景楠和楊蕙心出庭。</p>
-<p><em>昨日報導</em><br /><a href="https://www.inmediahk.net/node/1096011/">繼施德來後彭卓棋亦確診 押下周一續審</a></p>
+<p><strong>昨日報導</strong><br /><a href="https://www.inmediahk.net/node/1096011/">繼施德來後彭卓棋亦確診 押下周一續審</a></p>
 <p><strong>審訊第五十六日</strong><br /><a href="https://www.inmediahk.net/node/1095974/">施德來及律師確診 申請押後審訊一天獲批</a></p>
 <p><strong>審訊第五十五日</strong><br /><a href="https://www.inmediahk.net/node/1095958/">控方匿名證人稱「公開」錄音新西會議 惟不知與會者是否知悉 庭上爆笑</a><br /><a href="https://www.inmediahk.net/node/1095969/">匿名證人曾任建制派議助 否認獲指示及收報酬拍攝</a></p>
 <p><strong>審訊第五十四日</strong><br /><a href="https://www.inmediahk.net/node/1095939/">鍾錦麟作供完畢 控方為第四證人申匿名令獲批</a></p>
