--- a/_posts/2023-05-12-INMEDIA-美國國會呼籲制裁香港國安法官-外交部公署-只會敲響你們的末日喪鐘.html
+++ b/_posts/2023-05-12-INMEDIA-美國國會呼籲制裁香港國安法官-外交部公署-只會敲響你們的末日喪鐘.html
@@ -10,11 +10,11 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/06%201280_25.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>美國國會及行政當局中國委員會（CECC）在當地時間周四舉行聽證會，並發布一份詳細報告，列出29名處理過國安案件的裁判官及法官，報告指控他們在審案過程侵犯人權和破壞香港法治，建議美國政府可以向香港法官實施制裁，以抗衡香港法治被侵蝕。外交部駐港公署發言人強烈譴責和堅決反對事件，並指任何威脅實施制裁只會激起中國人民同仇敵愾的強大力量，只會「不斷敲響你們和反中亂港分子的末日喪鐘！」</p>
 <p><strong>主席點名要求制裁胡雅文、郭偉健</strong></p>
-<p>29名被點名的裁判官及法官，按姓氏排名分別是陳仲衡、陳兆愷、陳嘉信、陳慶偉、陳廣池、鄭念慈、張舉能、周家明、朱芬齡、霍兆剛、香淑嫻、關淑馨、郭偉健、林文瀚、羅德泉、李運騰、彭偉昌、彭寶琴、潘兆初、李素蘭、李義、蘇惠德、蘇文隆、司徒敬、杜麗冰、謝沈智慧、胡雅文、嚴舜儀及楊振權。報名指政府沒有對外公開《國安法》指定法官名單，但從不同傳媒報導得悉該29名法官有份處理《國安法》相關案件。</p>
+<p>29名被點名的裁判官及法官，按姓氏排名分別是陳仲衡、陳兆愷、陳嘉信、陳慶偉、陳廣池、鄭念慈、張舉能、周家明、朱芬齡、霍兆剛、香淑嫻、關淑馨、郭偉健、林文瀚、羅德泉、李運騰、彭偉昌、彭寶琴、潘兆初、李素蘭、李義、蘇惠德、蘇文隆、司徒敬、杜麗冰、謝沈智慧、胡雅文、嚴舜儀及楊振權。報告指政府沒有對外公開《國安法》指定法官名單，但從不同傳媒報導得悉該29名法官有份處理《國安法》相關案件。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5cF6G4y72G" title="螢幕擷取畫面 2023-05-12 172726"><img src="https://live.staticflickr.com/65535/52890647422_03912af7da_b.jpg" width="887" alt="螢幕擷取畫面 2023-05-12 172726" /></a><br /><em>報告截圖</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7d59q8u9y7" title="螢幕擷取畫面 2023-05-12 172733"><img src="https://live.staticflickr.com/65535/52891383894_4208da22e7_c.jpg" width="800" alt="螢幕擷取畫面 2023-05-12 172733" /></a><br /><em>報告截圖</em></p>
 <p>在CECC聽證會，委員會主席史密斯（Chris Smith）點名區域法院法官胡雅文及郭偉健，指兩人損害了法治和司法制度，其中郭偉健將5名出版3本兒童書藉的語言治療師判囚19個月，3本書被指具煽動意圖。史密斯公開表示，應該制裁該兩名法官。</p>
-<p>報名引述美國曾在2017年及2019年，分別制裁委內瑞拉及伊朗法官，因為他們涉及將大批異見人士及記者，透過「審訊騷（show trial）」將他們定罪及判刑。</p>
+<p>報告引述美國曾在2017年及2019年，分別制裁委內瑞拉及伊朗法官，因為他們涉及將大批異見人士及記者，透過「審訊騷（show trial）」將他們定罪及判刑。</p>
 <p>出任聽證會證人的，包括壹傳媒創辦人黎智英兒子黎崇恩（Sebastien Lai）。</p>
 <p><strong>中國人民不信邪、不怕鬼 不怕威脅被制裁</strong></p>
 <p>外交部駐港特派員公署發聲明回應事件，表示強烈譴責和堅決反對CECC發表的報告。公署指法官和司法人員獨立且不受干預地行使司法權力，是全球法治社會的基石，法官根據法定職權秉公獨立辦案，是「盡忠職守，天經地義」。公署稱現代社會「未曾聽聞哪個國家公然冒然制裁懲罰法官」，指責美國無良政客公然踐踏法律公義。</p>
