--- a/_posts/2023-05-13-INITIUM-土耳其大选现场-埃尔多安-和他失落的帝国梦.html
+++ b/_posts/2023-05-13-INITIUM-土耳其大选现场-埃尔多安-和他失落的帝国梦.html
@@ -9,33 +9,10 @@ author:
 ---
 
 <p>「伊斯坦堡是土耳其。在安那托利亚腹地，很多人一辈子可能都看不到一次像我这样的东亚面孔的地方，那也是土耳其。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-international-erdogan-and-his-sultan-dream/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/eb720ba5dd774c2a883f65dc408fe5be.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年5月7日，土耳其总统埃尔多安在伊斯坦堡阿塔图尔克机场开展竞选活动。摄：CTK via AP/达志影像" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年5月7日，土耳其总统埃尔多安在伊斯坦堡阿塔图尔克机场开展竞选活动。摄：CTK via AP/达志影像</figcaption></figure><p>仍有凉意的五月，我第一次见识到埃尔多安在土耳其首府安卡拉的府邸，一座叫“Cumhurbaşkanlığı Külliyesi”（总统府复合体；presidential complex）的庞然大物。</p>
+            <figcaption itemprop="caption">2023年5月7日，土耳其总统埃尔多安在伊斯坦堡阿塔图尔克机场开展竞选活动。摄：CTK via AP/达志影像</figcaption></figure><p><strong>（陈婉容，端传媒记者）</strong></p>
+<p>仍有凉意的五月，我第一次见识到埃尔多安在土耳其首府安卡拉的府邸，一座叫“Cumhurbaşkanlığı Külliyesi”（总统府复合体；presidential complex）的庞然大物。</p>
 <p>这座占地面积足有两个白金汉宫的“复合体”建成于2014年，埃尔多安正式坐上总统宝座的一年。虽然英文译名“presidential complex”看起来很普通，“Külliyesi”或“库里耶”却大有来头。阿拉伯语“kûl”的意思是“每一个”﹑“所有”，而库里耶其实就是一个以清真寺为核心的建筑复合体，里面顾名思义甚么都有：土耳其浴场﹑崇拜场所﹑伊斯兰学校（Madrasa）﹑食堂、医院（Dar al-Shifa）﹑有五万册藏书的图书馆。这里除了是埃尔多安本人的府邸﹑办公室，还是政府各部人员的办公场所。现代土耳其传统的分权（separation of powers）在这个“包罗万有”的地方不复存在。数年前埃尔多安还要在这里增建一个“白宫式”的总理府建筑复合体，只是计划被法院驳回了。</p>
 <p>库里耶是鄂图曼帝国（1299-1923；中国大陆较常作“奥斯曼帝国”）的标志性建筑，而鄂图曼帝国就是埃尔多安“土耳其大国梦”的创世神话：在帝国最兴盛的时期，土耳其作为一个伊斯兰势力，在版图和影响力上都能跟基督教势力平起平坐，甚至曾是欧洲第一强国。二十世纪后，这个幅员在极盛时期从中亚细亚延伸至北非和西欧的帝国跟不上现代化步伐，逐渐成为了欧洲列强眼中的“病夫”。但帝国无疑鼎盛过﹑辉煌过。土耳其人不会不记得，至少埃尔多安几乎每天都在重复提醒他们。</p>
-<p>而埃尔多安的这座库里耶，选址也有讲究：它座落在有“土耳其之肺”之称的阿塔图克森林农场（Atatürk Forest Farm）范围内。阿塔图克（Atatürk）无人不识：凯末尔（Mustafa Kemal），现代土耳其国父（“阿塔图克”意即“土耳其人之父”），一战民族英雄，土耳其共和国（1923年至今）第一任总统，1000里拉钞票上的头像，鄂图曼旧都伊斯坦堡国际机场的名称。这片土地由阿塔图克在1925年捐归国有，这里还有他故居的复制品（虽然是复制，但真正的故居在现属希腊的帖撒罗尼加，所以复制品变成了道统），现在是一间介绍阿塔图克生平的博物馆。如果现代的，世俗（secular）的土耳其有创世神话，那个创世神话就发生在这片森林里。</p>
- 
-
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
  
  
 
@@ -51,7 +28,31 @@ author:
  
  
  
-<p><a class="image" href="https://theinitium.com/article/20230514-international-erdogan-and-his-sultan-dream/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/9114aac0cd514443abba0df422206c8c.jpg?imageView2/1/w/1080/h/697/format/jpg" alt="2017年4月17日，土耳其总统埃尔多安在总统府向庆祝公投结果的人群发表讲话。摄：Kayhan Ozer/Anadolu Agency/Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+<p>而埃尔多安的这座库里耶，选址也有讲究：它座落在有“土耳其之肺”之称的阿塔图克森林农场（Atatürk Forest Farm）范围内。阿塔图克（Atatürk）无人不识：凯末尔（Mustafa Kemal），现代土耳其国父（“阿塔图克”意即“土耳其人之父”），一战民族英雄，土耳其共和国（1923年至今）第一任总统，1000里拉钞票上的头像，鄂图曼旧都伊斯坦堡国际机场的名称。这片土地由阿塔图克在1925年捐归国有，这里还有他故居的复制品（虽然是复制，但真正的故居在现属希腊的帖撒罗尼加，所以复制品变成了道统），现在是一间介绍阿塔图克生平的博物馆。如果现代的，世俗（secular）的土耳其有创世神话，那个创世神话就发生在这片森林里。</p><p><a class="image" href="https://theinitium.com/article/20230514-international-erdogan-and-his-sultan-dream/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/9114aac0cd514443abba0df422206c8c.jpg?imageView2/1/w/1080/h/697/format/jpg" alt="2017年4月17日，土耳其总统埃尔多安在总统府向庆祝公投结果的人群发表讲话。摄：Kayhan Ozer/Anadolu Agency/Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2017年4月17日，土耳其总统埃尔多安在总统府向庆祝公投结果的人群发表讲话。摄：Kayhan Ozer/Anadolu Agency/Getty Images<span class="credit"></span></figcaption><p></p><p>所以，埃尔多安的这个库里耶选址充满矛盾的张力：他把心心念念的苏丹﹑宫殿﹑以伊斯兰教旨为中心的帝国梦想，建在把土耳其从鄂图曼帝国沉痌拉出来的阿塔图克的土地上。但与其说是挑战，更像个明确的，大胆的宣示：他，埃尔多安－－至少可以平视阿塔图克。或者说，他就是新的阿塔图克。</p><p>而土耳其共和国成立一百年的2023年，本是埃尔多安证明自己比肩阿塔图克，甚至超越阿塔图克的一年。去年埃尔多安在正义与发展党（AKP）的21周年大会上说，2023年，这个国家的目标是要成为世上最大的政治和经济势力之一：“我们决不允许外部敌人，以及国家内部的无知者，阻止我们走这条路。”埃尔多安的“百年愿景”包括：挤身世界十大经济体，人均国民生产指数达到2万5千美元，失业率压低到5%，年出口达5千亿美元，全民受国家医保保障等。</p><p>但2023年的土耳其，看起来完全不像他梦想中，能对标先进国家的现代文明。那些百年愿景绝大部份成为了泡影，而且不能全怪疫情。今年二月的巨灾除了重创了他的东部票仓，更加暴露了帝国梦，建设梦的不堪一击。在地震中被夷为平地的哈泰省国际机场（Hatay International Airport），在兴建计划获批前就有地震专家，泥土专家警告过，机场的选址在一个被抽干的湖上，而且还在主要的板块断层线上，一旦发生地震，损毁难以估计。但埃尔多安政府搭著兴建进步土耳其的快车，利用根本不合格的核查员，批准了选址。2007年，在新机场开幕礼上，埃尔多安致辞说，哈泰省“值得拥有最好的。”地震后，由于哈泰省支持最大反对党共和人民党（CHP），埃尔多安甚至迟迟未给他们的市长打电话沟通救援。</p><p>也许正如埃尔多安说的，“民主就像一部有轨电车，到站就该下车了。”入黑后再来看，他的巨型库里耶灯火通明，在黑夜中伸开的左右两翼有展翅的态势。稍一瞇眼，我以为自己看到了苏丹的行宫。</p><p><a class="image" href="https://theinitium.com/article/20230514-international-erdogan-and-his-sultan-dream/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/4b10f5f9d5e0449ebe29189a112981b7.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年10月14日，土耳其东南部桑尼乌尔法省边境城镇阿卡卡莱，一名男子亲吻土耳其总统埃尔多安的横幅。摄：Lefteris Pitarakis/AP/达志影像" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2019年10月14日，土耳其东南部桑尼乌尔法省边境城镇阿卡卡莱，一名男子亲吻土耳其总统埃尔多安的横幅。摄：Lefteris Pitarakis/AP/达志影像<span class="credit"></span></figcaption><p></p><p>“埃尔多安是个病症，必须除去的病症”</p><p>现时，埃尔多安的选情正落后于共和人民党的候选人，74岁的基里达欧鲁（Kemal Kılıçdaroğlu）。维基百科的条目集合了多个民调的结果，截至五月初，二人支持率平均相差约3个百分点。在通膨严重，经济指数每年滑落，还刚经历了一场暴露埃尔多安政府腐败无能的巨灾的土耳其，埃尔多安选情艰难。但说到谁会赢，所有民调机构都还是一句：too close to call。已在元首位置二十年的埃尔多安，还是有大批虽承认他有过失，但仍将在票站支持他连任的土耳其人。</p><p>八年前我在土耳其东部跑了几个月，从安卡拉走到凡城（Van）﹑特拉布宗（Trabzon）﹑埃尔祖鲁姆（Erzurum）﹑尚勒乌尔法（Sanliurfa）﹑最南面土叙边境的马尔丁（Mardin）﹑迪亚巴克尔（Diyarbakir）﹑最东面土伊边境的多乌巴亚泽特（Doğubayazıt）﹑卡城（Kars）等地方。愈往东走愈多山，愈往东走愈贫穷。土耳其国宝级作家帕慕克在《雪》里写的卡城就是这样：寒冷﹑边缘﹑贫瘠﹑分裂。</p><p>土耳其称为安那托利亚（Anatolia）或小亚细亚（Asia Minor）的一大片腹地，就是埃尔多安和正义与发展党的票仓（不计东南部库尔德地区）。土耳其最富有的西部沿海地区是反对党共和人民党的领地。属于埃尔多安的那一大片土耳其很不起眼，但如果游客待在伊斯坦堡，一支水烟卖300里拉的旧城区，大概不会见到绝大部份的土耳其。许多土耳其人眼中“真正”的土耳其。</p><p>“埃尔多安承诺给他们基建﹑学校﹑医院，还有一个以伊斯兰教为中心的国家，他们就给他选票。所以愈穷愈需要强人。”以往我跟研究院的土耳其同学说起埃尔多安，他嗤之以鼻，抛下这一句。这个说法可能经不起学术拷问，他也肯定想得没那么简单，但在土耳其精英的眼里，可能真的愈穷愈傻，愈穷愈需要强人。这是他的真实感受。</p><p>艾默特跟我说，这些“太穷﹑太穆斯林﹑教育水平太低﹑太不西化﹑太保守”的“Black Turks”（相对的就是White Turks，西化﹑世俗化，在现代土耳其如鱼得水的精英），就是土耳其的大多数。自鄂图曼帝国崩溃，土耳其已经世俗化一百年，但土耳其也是个穆斯林占绝大多数的国家：近98％人口是穆斯林，当中72％是逊尼派穆斯林，剩下的是什叶派和阿列维派。当中有进步派﹑开明派，但也有为数不少的是基本教义派，而他们为了伊斯兰重新成为土耳其政治的中心，仍然会不顾一切支持埃尔多安。</p><p><a class="image" href="https://theinitium.com/article/20230514-international-erdogan-and-his-sultan-dream/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/41b3aae49a03498bbdf6348e10330287.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年5月2日，土耳其伊斯坦堡街上的一幅竞选海报印上土耳其总统埃尔多安肖像。摄：Francisco Seco/AP/达志影像" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2023年5月2日，土耳其伊斯坦堡街上的一幅竞选海报印上土耳其总统埃尔多安肖像。摄：Francisco Seco/AP/达志影像<span class="credit"></span></figcaption><p></p><p>我是在网上认识艾默特（Ahmet）的。网上的他话很多，打字速度飞快，常常不停歇地给我发来十几二十条信息。他的英文用语非常美式，主要体现在脏话上，说话很直白，我一度以为自己在跟一个美国中学生聊天。他说自己在土耳其上的是私校，“不是我吹嘘但教育质素比较好，因为不必跟政府规定的教程。”。但他又补一句“但只是很普通的私校，不是posh（豪华）的那种学校。真正posh的学校有‘big ass’游泳池，‘big ass’网球场﹑高尔夫球场。那些就是埃尔多安党羽的孩子上的学校。”</p><p>他在网上说自己只有十九岁。我在伊斯坦堡看到他，才知道他没骗我；虽然他头发蓬松面容憔悴，脸上有点没剃干净的胡渣，但一看就知道非常年轻。他在伊斯坦堡一个推动妇女权益的非政府组织当长期义工。“我是绝无仅有的男性。”我所以会去认识他，是因为留意到他常在讨论区贴女性主义新闻，好奇私信他询问土耳其女性组织的情况，聊了一阵子他才说自己其实是男生。</p><p>去当义工是因为姐姐艾拉（Ayla）四年前遭遇的严重暴力。“她被一个不认识的男人跟踪骚扰。有一天下午，她在我们家路口的小商店买点东西，回家路上被那个人截住，不由分说一把抱住了她。艾拉很害怕，想逃走，那个男的在背后把她勒住－－艾拉才155公分，很快就被他按在地上。她怕他向她施暴，一直尖叫，那个男的害怕了，就把她按在地上打，用拳打她的头和胸口，到她不再叫了，他以为她死了，就逃之夭夭。”</p><p>“那个小商店真的就在我们家150米开外，她被打的时候，我就在家里看电视，完全不知道艾拉正经历著人生最恐怖的十分钟。最后是我们的邻居发现了她，把她送到医院，然后通知了我的父母。我在医院看到她的时候，她整张脸都是黑色的，两只眼睛像两个紫色的气球，像附加物一样贴在脸上，一条肋骨被踹碎了。没有一处完整。我真的认不出她来。”</p><p>艾拉没有死，但有一部份的她永远都找不回来了。“我跟姐姐年龄相近，感情很好。我们家是自由派穆斯林家庭，从来没有男性优于女性的说法，父母对我们的期望﹑管教方式都是一样的。姐姐漂亮且聪明，很有文字﹑艺术天份，以前常希望未来去德国读书，成为记者。但现在她不敢常出门了。脸上，身上的伤也一直没有完全好起来。她一直为了父母强装坚强，但我知道她经常哭，几乎每晚都在哭。”</p><p>而施暴的人被抓了，轻判了五年－－法庭说，事发时他还很年轻，没有案底，家境清白。但由于已经监禁了三年多，即是说他很快就会被放出来。艾默特说到这里，忿忿不平。“妈妈在艾拉出事后就没一天晚上睡得好过。我们搬了家，远离了以前住的区域，但大门还是一定要每晚上三个锁。她也常常哭，不敢在艾拉面前说，但她很担心艾拉的未来。”</p><p>“埃尔多安不是问题的根源，他是一个症状，但也是要除去的症状。他说支持反对派的人都是娘娘腔，同性恋，他说女人不生孩子就不完整，他还想要推动法定强奸犯跟受害女童结婚就可以免罪的法律。这不是伊斯兰的问题，我也是伊斯兰教徒，但这不是伊斯兰。”</p><p>“除了埃尔多安，土耳其有太多事情需要改变。小时候我听说，我们区的一个发电厂，找了来自日本很厉害的工程师来维护。那时候我就想，这工作土耳其的工程师也可以做啊，土耳其的工程师也很厉害，我们也有不少可堪自豪的基建。但现在我真的说不出这句话。在现在的土耳其，当法官可以不懂法律，当老师可以不懂教育，医生手术大意出错可以不被问责，房子偷工减料害死人也不用坐牢。这个国家，全部都是资源错配，只要你是埃尔多安的人，你跟正义与发展党有关系，那你就可以横行无忌。”</p><p><a class="image" href="https://theinitium.com/article/20230514-international-erdogan-and-his-sultan-dream/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/f08467da9d9c41d0a49fca150411e95b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年2月10日，土耳其总统埃尔多安在地震后探望灾民。摄：Turkish Presidency / Murat Cetinmuhurdar / Handout/Anadolu Agency via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
